# AniRust

./: Cargo.toml  arquivo.txt
src/: main.rs  test.rs
