[package]
name = "AniRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.19", features = ["json"] }
scraper = "0.17.1"
tokio = { version = "1.32.0", features = ["full"] }
serde = "1.0.185"
serde_json = "1.0.105"



